@@ -58,12 +58,15 @@ static char doc[] = "GNU comsatd";
 
 static struct argp_option options[] = 
 {
-  { "config", 'c', N_("FILE"), 0, N_("Read configuration from FILE"), 0 },
+  { "config", 'c', N_("FILE"), OPTION_HIDDEN, "", 0 },
+  { "convert-config", 'C', N_("FILE"), 0,
+    N_("Convert the configuration FILE to new format."), 0 },
   { "test", 't', NULL, 0, N_("Run in test mode"), 0 },
   { NULL, 0, NULL, 0, NULL, 0 }
 };
 
-static error_t comsatd_parse_opt (int key, char *arg, struct argp_state *state);
+static error_t comsatd_parse_opt (int key, char *arg,
+				  struct argp_state *state);
 
 static struct argp argp = {
   options,
@@ -119,25 +122,6 @@ static int xargc;
 static char **xargv;
 int test_mode;
 
-static error_t
-comsatd_parse_opt (int key, char *arg, struct argp_state *state)
-{
-  switch (key)
-    {
-    case 'c':
-      /* FIXME: convert config to the new format and parse it */
-      break;
-
-    case 't':
-      test_mode = 1;
-      break;
-      
-    default:
-      return ARGP_ERR_UNKNOWN;
-    }
-  return 0;
-}
-
 struct mu_cfg_param comsat_cfg_param[] = {
   { "allow-biffrc", mu_cfg_bool, &allow_biffrc, 0, NULL,
     N_("Read .biffrc file from the user home directory") },
@@ -158,6 +142,48 @@ struct mu_cfg_param comsat_cfg_param[] = {
   { "acl", mu_cfg_section, },
   { NULL }
 };
+
+static error_t
+comsatd_parse_opt (int key, char *arg, struct argp_state *state)
+{
+  switch (key)
+    {
+    case 'c':
+      {
+	char *cfg;
+	int fd;
+	FILE *fp;
+
+	mu_diag_output (MU_DIAG_WARNING,
+_("The old configuration file format and the --config command\n"
+  "line option are deprecated and will be removed in the future\n"
+  "release. Please use --convert-config option to convert your\n"
+  "settings to the new format."));
+	/* FIXME: Refer to the docs */
+	
+	fd = mu_tempfile (NULL, &cfg);
+	fp = fdopen (fd, "w");
+	convert_config (arg, fp);
+	fclose (fp);
+	mu_get_config (cfg, mu_program_name, comsat_cfg_param, 0, NULL);
+	unlink (cfg);
+	free (cfg);
+      }
+      break;
+      
+    case 'C':
+      convert_config (arg, stdout);
+      exit (0);
+
+    case 't':
+      test_mode = 1;
+      break;
+      
+    default:
+      return ARGP_ERR_UNKNOWN;
+    }
+  return 0;
+}
 
 int
 main (int argc, char **argv)
