@@ -1,21 +1,0 @@
-# This is an example configuration file for GNU comsatd utility.
-# To use, run comsatd -c <path>/comsat.conf
-
-## General settings
-# Dump on screen at most 5 lines of the message body
-max-lines 5
-# Honour per-user .biffrc files
-allow-biffrc yes
-
-## Security settings
-# Allow no more than 10 requests in 10 seconds, then register overflow.
-max-requests 10
-request-control-interval 10
-# Sleep for 5 seconds when the first overflow occurs.
-overflow-delay-time 5
-# If two overflows happen within a 15 seconds interval, double the
-# sleep time. 
-overflow-control-interval 15
-## Access Control Lists
-acl allow 127.0.0.1
-acl deny any
