@@ -1,14 +1,0 @@
-## This is a sample mailutils configuration file
-## Upon startup, a mailutils program scans this file for a line that
-## begins either with a program name or with word `mailutils'. When
-## found, the rest of the line following the first word is split up
-## at whitespace characters and resulting words are added to the 
-## program arguments _before_ the command line options. 
-:mailutils --maildir /var/spool/mail
-:auth --sql-host sql.sample.net --sql-db Passwd \
-      --sql-port 3306 --sql-user mailutils \
-      --sql-passwd guessme \
-      --sql-getpwnam 'select user_name,password,uid,10000,"/dev/null","/dev/null" from pass where user_name="%u" and service="EMAIL"' \
-      --sql-getpwuid 'select user_name,password,uid,10000,"/dev/null","/dev/null" from pass where uid=%u and service="EMAIL"'
-imap4d --daemon=20 --timeout=1800
-mail.local --source %h/.filter.scm
